2.1-release
===========
- fixed a problem with setField not accessing fields declared in a parent
  class for an object.
- [$obj field] can now get protected members declared within the parent of
  $obj.  This does not extend to protected members declared up the class 
  hierarchy.

2.1-release  (7 Aug 08) [update 2.5]
===========
- made a sanity check with inline function execution to keep jIRCii
  compatability
- fixed &sublist only front elements of read-only arrays. (another
  find from the jIRCii scripting community)

2.1-release  (5 Aug 08) [update 2]
===========
- modified import from to add jar file to system classpath.  This
  uses a reflection hack but it now means you can add multiple jars
  and they can find resources from eachother, all at runtime.

  This hack came from Ralph Becker's Classpath extension for Sleep.  
- Sleep 2.1 default implementation no longer manages cleanup of
  subroutines from unloaded scripts.  The old mechanism for this
  was complex and resulted in an unnecessary memory leak in 
  shared environments with no awareness of this feature.  jIRCii
  depends on this behavior and so I am moving the code for this
  to the jIRCii source tree (where it manages similar cleanup
  for events, aliases, and other things).
- include(...) now sets $__INCLUDE__ to the file included.  
  use this to allow modules to find resources that are located
  relative to themselves.
- hacked <=> to compare doubles with a BigDecimal, gets around
  processor floating point issues when comparing doubles
- foreach on a hash now skips over keys with $null values
  (a $null value is removed at the first convienence from a
  Sleep hash--usually by keys() or values() functions)
- Fixed bug causing -exists "" to return true..  turns out
  toSleepFile evaluated "" to the current working directory
- Sleep functions (map, reduce, filter, etc.) that support 
  iterating over a closure or array and foreach loops can now
  iterate over Java iterators.  