@@ -1,0 +1,6 @@
+# test exponentation in the assignment ops
+
+$x = 2;
+$x **= 3;
+
+println($x);
