@@ -1,0 +1,3 @@
+class [Ljava.lang.Object;
+class [[Ljava.lang.Object;
+class [[[[[[[Ljava.lang.Object;
